--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,19 +2,13 @@ name: Semgrep
 on: [push]
 jobs:
   semgrep:
-    runs-on: ubuntu-latest
-    name: Check
+    name: Scan
+    runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v1
-      - name: Semgrep
-        id: semgrep
-        uses: returntocorp/semgrep-action@v1
+      - uses: returntocorp/semgrep-action@v1
+        env: # Optional environment variable for inline PR comments (beta)
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          config: p/r2c-ci
-          generatesarif: "1"
-        continue-on-error: true   
-      - name: upload to github code scanning
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: semgrep.sarif
-        if: always()
+          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
+          publishDeployment: 301
