--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   semgrep:
     name: Scan
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: returntocorp/semgrep-action@v1
